Mon Oct 25 14:42:46 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
        
          Cosmetic changes.
          
        * TAO_IDLbe/be_visitor_null_return_value.cpp:
        
          Fixed bug in static_cast<> template parameter name
          generation for sequences.
          
        * TAO_IDLbe/be_visitor_component/facet_exh.cpp:
        * TAO_IDLbe_include/be_visitor_component/facet_exh.h:
        
          Reuse of static function be_visitor_interface_ih::method_helper
          was not a perfect fit, so added a modified version to
          be_visitor_facet_exh.
          
Mon Oct 25 13:46:03 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:
        
          Updated with 2 IDL compiler changes.

Mon Oct 25 08:09:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_init.cpp:
          Simplified

Mon Oct 25 05:58:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_init.cpp:
        * TAO_IDL/be/be_visitor_component.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs_attr_init.cpp:
        * TAO_IDL/be_include/be_visitor_attr_init.h:
          Added new visitor to generate the attribute initialization in the
          executor constructor

Mon Oct 25 05:37:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_null_return_value.cpp:
          Reverted change below, this visitor seems to be used in multiple
          places, need to add a new one for attribute initialization

Sun Oct 24 11:34:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_null_return_value.cpp:
          Simplified member initialization

Sat Oct 23 11:54:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp: