@@ -95,7 +95,7 @@ be_visitor_facet_exh::visit_provides (be_provides *node)
                              ACE_TEXT ("failed\n")),
                             -1);
         }
-        
+
       os_ << be_nl << "//@}";
     }
 
